--- a/frontendProgReqs/package.json
+++ b/frontendProgReqs/package.json
@@ -12,16 +12,25 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
     "moment": "^2.29.4",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.17.0",
+    "react-toastify": "^9.1.3",
     "wouter": "^2.12.0",
     "zxcvbn": "^4.4.2"
   },
@@ -29,10 +38,13 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
     "vite": "^4.4.5"
   }
 }
