--- a/frontendProgReqs/package.json
+++ b/frontendProgReqs/package.json
@@ -22,6 +22,8 @@
     "@mui/material": "^5.14.13",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
