--- a/frontendProgReqs/package.json
+++ b/frontendProgReqs/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.14.13",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
+    "gh-pages": "^6.1.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
