--- a/.github/workflows/main_progreqsapiv1.yml
+++ b/.github/workflows/main_progreqsapiv1.yml
@@ -60,7 +60,12 @@ jobs:
           slot-name: 'Production'
           package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_4743CD9629F540ABB540803A9313AEA3 }}
-          env: |
+          
+      - name: Set up Nodejs version
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'
+          env:
             DB_DIALECT: ${{ secrets.DB_DIALECT }}
             DB_HOST: ${{ secrets.DB_HOST }}
             DB_NAME: ${{ secrets.DB_NAME }}
@@ -69,3 +74,6 @@ jobs:
             DB_USER: ${{ secrets.DB_USER }}
             LINKMONGO: ${{ secrets.LINKMONGO }}
             REFRESH_TOKEN_SECRET: ${{ secrets.REFRESH_TOKEN_SECRET }}
+            ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
+          run: |
+            npm run start
