cambios en yml del backend para el despliegue en Azurev0.0.4

--- a/.github/workflows/main_progreqsapiv1.yml
+++ b/.github/workflows/main_progreqsapiv1.yml
@@ -63,7 +63,8 @@ jobs:
           node-version: '20.x'
 
       - name: 'Change directory to backend folder'
-        run: cd backendProgReqs1
+        run: cd backendProgReqs1 && ls -la
+
 
       - name: 'Set up Environment Variables'
         run: |
