--- a/.github/workflows/main_progreqsapiv1.yml
+++ b/.github/workflows/main_progreqsapiv1.yml
@@ -20,6 +20,7 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd backendProgReqs1
           npm install
           npm run build --if-present
           npm run test --if-present
@@ -57,15 +58,6 @@ jobs:
           package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_4743CD9629F540ABB540803A9313AEA3 }}
           
-      - name: 'Set up Node.js version'
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20.x'
-
-      - name: 'Change directory to backend folder'
-        run: cd backendProgReqs1 && ls -la
-
-
       - name: 'Set up Environment Variables'
         run: |
           echo "DB_DIALECT=${{ secrets.DB_DIALECT }}" >> $GITHUB_ENV
@@ -79,4 +71,17 @@ jobs:
           echo "ACCESS_TOKEN_SECRET=${{ secrets.ACCESS_TOKEN_SECRET }}" >> $GITHUB_ENV
 
       - name: Start Node.js server
-        run: npm run start
+        run: |
+          cd backendProgReqs1
+          npm install  # Si es necesario, instala las dependencias
+          npm run start
+        env:
+          DB_DIALECT: ${{ secrets.DB_DIALECT }}
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+          DB_USER: ${{ secrets.DB_USER }}
+          LINKMONGO: ${{ secrets.LINKMONGO }}
+          REFRESH_TOKEN_SECRET: ${{ secrets.REFRESH_TOKEN_SECRET }}
+          ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
