cambios en yml del backend para el despliegue en Azurev0.0.9

--- a/.github/workflows/main_progreqsapiv1.yml
+++ b/.github/workflows/main_progreqsapiv1.yml
@@ -60,6 +60,7 @@ jobs:
       - name: Start Node.js server
         run: |
           cd backendProgReqs1
+          npm install
           npm run start
         env:
           DB_DIALECT: ${{ secrets.DB_DIALECT }}
