--- a/.github/workflows/main_progreqsapiv1.yml
+++ b/.github/workflows/main_progreqsapiv1.yml
@@ -52,6 +52,13 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
       
+      - name: 'Convert DB_PORT to integer'
+        run: |
+          DB_PORT=${{ secrets.DB_PORT }}
+          DB_PORT_INT=$((10#${DB_PORT}))
+          echo "DB_PORT as integer: $DB_PORT_INT"
+        id: convert-db-port
+
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
@@ -65,7 +72,7 @@ jobs:
           DB_HOST: ${{ secrets.DB_HOST }}
           DB_NAME: ${{ secrets.DB_NAME }}
           DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          DB_PORT: ${{ secrets.DB_PORT }}
+          DB_PORT: ${{ steps.convert-db-port.outputs.DB_PORT_INT }} # Usando el valor entero
           DB_USER: ${{ secrets.DB_USER }}
           LINKMONGO: ${{ secrets.LINKMONGO }}
           ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
