--- a/.github/workflows/main_progreqsapiv1.yml
+++ b/.github/workflows/main_progreqsapiv1.yml
@@ -23,13 +23,13 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          npm install
           cd backendProgReqs1
           npm install
           npm run build --if-present
           npm test || echo "No tests found"
-
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip backendProgReqs1/* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
